@@ -9,7 +9,9 @@ import static com.sms.courier.common.exception.ErrorCode.DELETE_USER_GROUP_BY_ID
 import static com.sms.courier.common.exception.ErrorCode.EDIT_NOT_EXIST_ERROR;
 import static com.sms.courier.common.exception.ErrorCode.EDIT_USER_GROUP_ERROR;
 import static com.sms.courier.common.exception.ErrorCode.GET_USER_GROUP_LIST_ERROR;
-import static com.sms.courier.common.field.CommonField.REMOVE;
+import static com.sms.courier.common.exception.ErrorCode.THE_NAME_EXISTS_ERROR;
+import static com.sms.courier.common.field.CommonField.GROUP_ID;
+import static com.sms.courier.utils.Assert.isFalse;
 
 import com.sms.courier.common.aspect.annotation.Enhance;
 import com.sms.courier.common.aspect.annotation.LogRecord;
@@ -17,6 +19,7 @@ import com.sms.courier.common.exception.ApiTestPlatformException;
 import com.sms.courier.dto.request.UserGroupRequest;
 import com.sms.courier.dto.response.UserGroupResponse;
 import com.sms.courier.entity.system.SystemRoleEntity;
+import com.sms.courier.entity.system.UserEntity;
 import com.sms.courier.entity.system.UserGroupEntity;
 import com.sms.courier.mapper.UserGroupMapper;
 import com.sms.courier.repository.CommonRepository;
@@ -27,10 +30,14 @@ import com.sms.courier.utils.ExceptionUtils;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.collections4.CollectionUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.springframework.dao.DuplicateKeyException;
+import org.springframework.data.mongodb.core.query.Query;
+import org.springframework.data.mongodb.core.query.Update;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Service;
 
@@ -62,7 +69,7 @@ public class UserGroupServiceImpl implements UserGroupService {
     @Override
     public List<UserGroupResponse> list() {
         try {
-            return commonRepository.listLookupUser(USER_GROUP.getCollectionName(), List.of(REMOVE.is(Boolean.FALSE)),
+            return commonRepository.listLookupUser(USER_GROUP.getCollectionName(), Collections.emptyList(),
                 UserGroupResponse.class);
         } catch (Exception e) {
             log.error("Failed to get the UserGroup list!", e);
@@ -75,9 +82,14 @@ public class UserGroupServiceImpl implements UserGroupService {
     @LogRecord(operationType = ADD, operationModule = USER_GROUP, template = "{{#userGroupRequest.name}}")
     public Boolean add(UserGroupRequest userGroupRequest) {
         log.info("UserGroupService-add()-params: [UserGroup]={}", userGroupRequest.toString());
+        String name = userGroupRequest.getName();
         try {
             UserGroupEntity userGroup = userGroupMapper.toEntity(userGroupRequest);
+            isFalse(userGroupRepository.existsByName(name), THE_NAME_EXISTS_ERROR, name);
             userGroupRepository.insert(userGroup);
+        } catch (ApiTestPlatformException courierException) {
+            log.error(courierException.getMessage());
+            throw courierException;
         } catch (Exception e) {
             log.error("Failed to add the UserGroup!", e);
             throw new ApiTestPlatformException(ADD_USER_GROUP_ERROR);
@@ -98,6 +110,9 @@ public class UserGroupServiceImpl implements UserGroupService {
         } catch (ApiTestPlatformException courierException) {
             log.error(courierException.getMessage());
             throw courierException;
+        } catch (DuplicateKeyException e) {
+            log.error("The name {} exists.", userGroupRequest.getName());
+            throw ExceptionUtils.mpe(THE_NAME_EXISTS_ERROR, userGroupRequest.getName());
         } catch (Exception e) {
             log.error("Failed to add the UserGroup!", e);
             throw new ApiTestPlatformException(EDIT_USER_GROUP_ERROR);
@@ -110,7 +125,12 @@ public class UserGroupServiceImpl implements UserGroupService {
         enhance = @Enhance(enable = true, primaryKey = "ids"))
     public Boolean delete(List<String> ids) {
         try {
-            return commonRepository.deleteByIds(ids, UserGroupEntity.class);
+            Update update = new Update();
+            update.unset(GROUP_ID.getName());
+            Query query = new Query();
+            GROUP_ID.in(ids).ifPresent(query::addCriteria);
+            commonRepository.updateField(query, update, UserEntity.class);
+            return userGroupRepository.deleteByIdIn(ids);
         } catch (Exception e) {
             log.error("Failed to delete the UserGroup!", e);
             throw new ApiTestPlatformException(DELETE_USER_GROUP_BY_ID_ERROR);
@@ -120,6 +140,7 @@ public class UserGroupServiceImpl implements UserGroupService {
     @Override
     public List<SimpleGrantedAuthority> getAuthoritiesByUserGroup(String groupId) {
         try {
+            Objects.requireNonNull(groupId, "The groupId must not be null.");
             UserGroupEntity userGroupEntity = userGroupRepository.findById(groupId)
                 .orElseThrow(() -> new RuntimeException(
                     String.format("The user group - %s was not found.", groupId)));
@@ -129,6 +150,7 @@ public class UserGroupServiceImpl implements UserGroupService {
             return CollectionUtils.isNotEmpty(roleNames) ? roleNames.stream().map(SimpleGrantedAuthority::new)
                 .collect(Collectors.toList()) : Collections.emptyList();
         } catch (Exception exception) {
+            log.error("Query authorities by id error.", exception);
             return Collections.emptyList();
         }
     }
